# developer

./: Cargo.toml  README.md  developer_tools.md
rig/: Cargo.toml  README.md  config.toml
rig/src/: chat.rs  config.rs  main.rs  mcp_adaptor.rs
src/: counter.rs  main.rs
src/developer/: image_processor.rs  mod.rs  screen_capture.rs  shell.rs  text_editor.rs  workflow.rs
src/developer/descriptions/: shell_unix.md  shell_windows.md  text_editor.md  workflow.md
