[package]
name = "developer"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "schemars",
    "transport-io",
] }

# Additional dependencies for developer module
include_dir = "0.7"
ignore = "0.4"
url = "2.5"
shellexpand = "3.1"
base64 = "0.22"
image = "0.25"
xcap = "0.6"
serial_test = "3.2"
tempfile = "3.20"
regex = "1.11"
