[workspace]
members = [".", "rig"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
repository = "https://github.com/VertexStudio/developer.git"
description = "MCP Developer tools server"
keywords = ["developer", "tools", "mcp"]
homepage = "https://github.com/VertexStudio/developer.git"
categories = ["development-tools"]
readme = "README.md"

[workspace.dependencies]
# Core async and error handling
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2"

# MCP SDK
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "915bc3fb37fe259fba1a853a9dd03566593f3310", features = [
    "client",
    "schemars",
    "transport-io",
    "transport-child-process",
    "transport-sse-client",
    "reqwest",
] }

[package]
name = "developer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }

# Package-specific dependencies
clap = { version = "4.5", features = ["derive"] }
tokio-util = { workspace = true }
axum = "0.8"

# Additional dependencies for developer module
include_dir = "0.7"
ignore = "0.4"
url = "2.5"
shellexpand = "3.1"
base64 = "0.22"
image = "0.25"
serial_test = "3.2"
tempfile = "3.20"
regex = "1.11"

# These dependencis are unstable, pinning for now
xcap = "0.0.14"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.7"
